# watercooler-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  slack-manifest.yaml
.serena/memories/: done_when_finished.md  project_overview.md  style_and_conventions.md  suggested_commands.md
src/watercooler_dashboard/: __init__.py  __main__.py  app.py  auto_refresh.py  blocks.py  config.py  git_helper.py  local_app.py  thread_parser.py
tests/: __init__.py  test_blocks.py  test_config.py  test_local_app.py  test_thread_parser.py
