[project]
name = "watercooler-dashboard"
version = "0.1.0"
description = "Slack dashboard for Watercooler thread monitoring"
authors = [
    {name = "MostlyHarmless AI", email = "calebjhoward@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "slack-bolt>=1.18.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.40",
    "pyyaml>=6.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watercooler_dashboard"]

[tool.hatch.build.targets.sdist]
include = [
  "src/watercooler_dashboard",
  "pyproject.toml",
  "README.md",
  "tests",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
